Create Request and List item metadata API Code